--- a/modulo10/template-materialui/public/manifest.json
+++ b/modulo10/template-materialui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Gerenciador de tarefas",
+  "name": "Create a task manager Sample",
   "icons": [
     {
       "src": "logo.png",
